--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,9 @@ name = "cttw"
 crate-type = ["dylib"]
 
 [dependencies]
-time = "*"
-url = "*"
-curl = "*"
-log = "*"
 rustc-serialize = "*"
+twitter-api = "*"
+oauth-client = "*"
 
 [dependencies.rust-crypto]
 git = "https://github.com/DaGenix/rust-crypto"
